welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (!estFacemur()){
    return false
  }else
  avance()
  if (getCouleurSol()==Color.green){
    recule()
    return true
  }else { 
  recule()
  return false}
}